Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-svc
  labels:
    app: netflix-svc
  namespace: ns-netflix
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: netflix-app
